Bug 818861 Shouldn't allow promising a flat string from a flat string r=dbaron