dom/plugins/ipc/PluginProcessChild.cpp
@@ -70,7 +70,7 @@ PluginProcessChild::Init()
                 setInterpose.Append(interpose);
             }
             // Values passed to PR_SetEnv() must be seperately allocated.
-            char* setInterposePtr = strdup(PromiseFlatCString(setInterpose).get());
+            char* setInterposePtr = strdup(setInterpose.get());
             PR_SetEnv(setInterposePtr);
         }
     }
